fixed dark mode

--- a/src/app/components/Fixtures/Matches.css
+++ b/src/app/components/Fixtures/Matches.css
@@ -30,7 +30,7 @@
     .opened-card {
       border-radius: 15px;
       cursor: pointer;
-      height: calc(100% - 10rem);
+      height: fit-content;
       width: 40rem;
       position: absolute;
       top: 0; right: 0; bottom: 0; left: 0;
@@ -40,6 +40,8 @@
       justify-content: center;
       flex-wrap: wrap;
       flex-direction: column;
+      background: #171717d9;
+
 
       .button_close{
         position: relative;
@@ -58,15 +60,13 @@
       }
       
       div {
-        background: white;
-        
         &:first-child {
           margin-left: 0;
         }
       }
     }
     .card {
-      background: white;
+      background: #4444446b;
       border-radius: 15px;
       width: 100%;
       height: 100%;
